--- a/apps/admin-practice/src/pages/home/Home.scss
+++ b/apps/admin-practice/src/pages/home/Home.scss
@@ -6,6 +6,13 @@
 
     .widgets,
     .charts {
+      display: flex;
+      padding: 20px;
+      gap: 20px;
+    }
+
+    .charts {
+      padding: 5px 20px;
     }
   }
 }
