refactor: sidebar layout

--- a/apps/admin/app/globals.css
+++ b/apps/admin/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '../styles/_spinner.css';
 
 @layer base {
   html,
@@ -9,4 +10,16 @@
   }
 }
 
-@import '../styles/_spinner.css';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
